--- a/index.html
+++ b/index.html
@@ -6,39 +6,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
 
     <!-- Header section -->
     <header>
-        <a href="/" class="logo"> <span class="logo-web">Web</span>Studio </a>
+        <a href="/" class="logo link"> <span class="logo-web">Web</span>Studio </a>
         <nav>
-            <ul class="navigation-list">
-                <li class="navigation-item"><a class="navigation-link" href="/">Студия</a></li>
-                <li class="navigation-item"><a class="navigation-link" href="/">Портфолио</a></li>
-                <li class="navigation-item"><a class="navigation-link" href="/">Контакты</a></li>
+            <ul class="navigation-list list">
+                <li class="navigation-item"><a class="navigation-link link navigation-link-current" href="/">Студия</a>
+                </li>
+                <li class="navigation-item"><a class="navigation-link link" href="./portfolio.html">Портфолио</a></li>
+                <li class="navigation-item"><a class="navigation-link link" href="">Контакты</a></li>
             </ul>
         </nav>
 
-        <ul class="connection">
-            <li class="connection-item"><a class="connection-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            <li class="connection-item"><a class="connection-link"
+        <ul class="connection list">
+            <li class="connection-item"><a class="connection-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+
+            <li class="connection-item"><a class="connection-link link"
                     href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         </ul>
     </header>
 
+
     <main>
         <!-- Hero section -->
         <section class="hero">
-            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <h1 class="headline">Эффективные решения для вашего бизнеса</h1>
             <button class="hero-btn" type="button">Заказать услугу</button>
         </section>
 
         <!-- Criteria section -->
         <section class="criteria">
             <h2 class="criteria-title">Критерии работы</h2>
-            <ul class="criteria-list">
+            <ul class="criteria-list list">
                 <li class="criteria-item">
                     <h3 class="criteria-item-title">Внимание к деталям</h3>
                     <p class="criteria-item-desk">
@@ -72,8 +81,8 @@
 
         <!-- WORK section -->
         <section class="work">
-            <h2 class="work-title">Чем мы занимаемся</h2>
-            <ul class="work-list">
+            <h2 class="work-title subtitle">Чем мы занимаемся</h2>
+            <ul class="work-list list">
                 <li class="work-item">
                     <img class="work-img" src="images/box1.jpg" alt="пишет программный код на компьютере" width="370"
                         height="295" />
@@ -91,8 +100,8 @@
 
         <!-- TEAM section -->
         <section class="team">
-            <h2 class="team-title">Наша команда</h2>
-            <ul class="team-list">
+            <h2 class="team-title subtitle">Наша команда</h2>
+            <ul class="team-list list">
                 <li class="team-item">
                     <img class="team-img" src="images/person1.jpg" alt="Игорь Демьяненко. Продуктовый дизайнер"
                         width="270" height="260" />
@@ -122,13 +131,14 @@
     </main>
 
     <!-- FOOTER section -->
-    <footer>
-        <a class="footer-logo" href=""> <span class="footer-logo-web">Web</span>Studio </a>
-        <address>
+    <footer class="footer">
+        <a class="footer-logo link" href=""> <span class="logo-web">Web</span>Studio </a>
+        <address class="address">
             <p class="footer-address"> г. Киев, пр-т Леси Украинки, 26</p>
-            <ul class="fotter-list">
-                <li class="footer-item"><a class="footer-link" href="mailto:info@example.com">info@example.com</a></li>
-                <li class="footer-item"><a class="footer-link" href="tel:+380991111111">+38 099 111 11 11</a></li>
+            <ul class="fotter-list list">
+                <li class="footer-item"><a class="footer-link link" href="mailto:info@example.com">info@example.com</a>
+                </li>
+                <li class="footer-item"><a class="footer-link link" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
 
 
