delet surplus font-weight, font-size

--- a/portfolio.html
+++ b/portfolio.html
@@ -130,9 +130,10 @@
     </main>
 
     <!-- FOOTER section -->
+
     <footer class="footer">
         <a class="footer-logo link" href=""> <span class="logo-web">Web</span>Studio </a>
-        <address>
+        <address class="address">
             <p class="footer-address"> г. Киев, пр-т Леси Украинки, 26</p>
             <ul class="fotter-list list">
                 <li class="footer-item"><a class="footer-link link" href="mailto:info@example.com">info@example.com</a>
